--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
 
 <head>
+  <title>calculator</title>
   <meta charset="UTF-8" />
   <link rel="stylesheet" href="style.css" />
 </head>
